--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 flatbuffers~=24.3.25
-numpy~=2.0.2
+numpy==1.26.4
 typing_extensions~=4.12.2
 pillow~=11.0.0
 pip~=23.2.1
@@ -15,7 +15,7 @@ colorama~=0.4.6
 optree~=0.13.0
 tensorflow~=2.18.0
 packaging~=24.1
-scipy~=1.14.1
+scipy==1.13.1
 namex~=0.0.8
 mdurl~=0.1.2
 llvmlite~=0.43.0
@@ -102,3 +102,10 @@ pefile==2023.2.7
 tokenizers==0.20.1
 safetensors==0.4.5
 transformers==4.46.1
+nltk==3.9.1
+click==8.1.7
+gensim==4.3.3
+pynput==1.7.7
+plotter==1.3.20
+cx_Freeze==7.2.4
+lief==0.15.1
