--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,72 @@
-flatbuffers~=24.3.25
+flatbuffers==24.3.25
 numpy==1.26.4
-typing_extensions~=4.12.2
-pillow~=11.0.0
-pip~=23.2.1
-wheel~=0.41.2
-setuptools~=68.2.0
-gast~=0.6.0
-h5py~=3.12.1
-rich~=13.9.4
-Pygments~=2.18.0
-requests~=2.32.3
-keras~=3.6.0
-colorama~=0.4.6
-optree~=0.13.0
-tensorflow~=2.18.0
-packaging~=24.1
+typing_extensions==4.12.2
+pillow==11.0.0
+pip==23.2.1
+wheel==0.41.2
+setuptools==68.2.0
+gast==0.6.0
+h5py==3.12.1
+rich==13.9.4
+Pygments==2.18.0
+requests==2.32.3
+keras==3.6.0
+colorama==0.4.6
+optree==0.13.0
+tensorflow==2.18.0
+packaging==24.1
 scipy==1.13.1
-namex~=0.0.8
-mdurl~=0.1.2
-llvmlite~=0.43.0
-numba~=0.60.0
-cffi~=1.17.1
-six~=1.16.0
-pooch~=1.8.2
-tqdm~=4.66.6
-platformdirs~=4.3.6
-threadpoolctl~=3.5.0
-matplotlib~=3.9.2
+namex==0.0.8
+mdurl==0.1.2
+llvmlite==0.43.0
+numba==0.60.0
+cffi==1.17.1
+six==1.16.0
+pooch==1.8.2
+tqdm==4.66.6
+platformdirs==4.3.6
+threadpoolctl==3.5.0
+matplotlib==3.9.2
 certifi==2024.8.30
-imageio~=2.36.0
-soundfile~=0.12.1
-audioread~=3.0.1
-soxr~=0.5.0.post1
-lazy_loader~=0.4
-msgpack~=1.1.0
-decorator~=4.4.2
-moviepy~=1.0.3
-proglog~=0.1.10
-urllib3~=2.2.3
-python-dateutil~=2.9.0.post0
-Markdown~=3.7
-idna~=3.10
-MarkupSafe~=3.0.2
-contourpy~=1.3.0
-fonttools~=4.54.1
-pycparser~=2.22
-pyparsing~=3.2.0
-termcolor~=2.5.0
-darkdetect~=0.8.0
-cycler~=0.12.1
-kiwisolver~=1.4.7
-opt_einsum~=3.4.0
-wrapt~=1.16.0
-astunparse~=1.6.3
-tensorboard~=2.18.0
-Werkzeug~=3.1.1
-customtkinter~=5.2.2
-librosa~=0.10.2.post1
-xgboost~=2.1.2
-pydub~=0.25.1
-sniffio~=1.3.1
-fastapi~=0.115.4
-starlette~=0.41.2
-pydantic~=2.9.2
-pydantic_core~=2.23.4
-anyio~=4.6.2.post1
-greenlet~=3.1.1
-SQLAlchemy~=2.0.36
+imageio==2.36.0
+soundfile==0.12.1
+audioread==3.0.1
+soxr==0.5.0.post1
+lazy_loader==0.4
+msgpack==1.1.0
+decorator==4.4.2
+moviepy==1.0.3
+proglog==0.1.10
+urllib3==2.2.3
+python-dateutil==2.9.0.post0
+Markdown==3.7
+idna==3.10
+MarkupSafe==3.0.2
+contourpy==1.3.0
+fonttools==4.54.1
+pycparser==2.22
+pyparsing==3.2.0
+termcolor==2.5.0
+darkdetect==0.8.0
+cycler==0.12.1
+kiwisolver==1.4.7
+opt_einsum==3.4.0
+wrapt==1.16.0
+astunparse==1.6.3
+tensorboard==2.18.0
+Werkzeug==3.1.1
+customtkinter==5.2.2
+librosa==0.10.2.post1
+xgboost==2.1.2
+pydub==0.25.1
+sniffio==1.3.1
+fastapi==0.115.4
+starlette==0.41.2
+pydantic==2.9.2
+pydantic_core==2.23.4
+anyio==4.6.2.post1
+greenlet==3.1.1
+SQLAlchemy==2.0.36
 future==1.0.0
 attrs==24.2.0
 Jinja2==3.1.4
