--- a/requirements.txt
+++ b/requirements.txt
@@ -109,3 +109,26 @@ pynput==1.7.7
 plotter==1.3.20
 cx_Freeze==7.2.4
 lief==0.15.1
+
+ipython==8.29.0
+parso==0.8.4
+jedi==0.19.1
+mock==5.1.0
+isort==5.13.2
+plotly==5.24.1
+tenacity==9.0.0
+traitlets==5.14.3
+pylint==3.3.1
+astroid==3.3.5
+tomlkit==0.13.2
+mccabe==0.7.0
+prompt_toolkit==3.0.48
+wcwidth==0.2.13
+seaborn==0.13.2
+httplib2==0.22.0
+asttokens==2.4.1
+executing==2.1.0
+magicmock==0.3
+pure_eval==0.2.3
+wordcloud==1.9.3
+pycodestyle==2.12.1
