--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ numpy==1.26.4
 typing_extensions==4.12.2
 future==1.0.0
 pillow==11.0.0
-pip==23.2.1
 attrs==24.2.0
 wheel==0.41.2
 Jinja2==3.1.4
@@ -46,7 +45,7 @@ mdurl==0.1.2
 llvmlite==0.43.0
 numba==0.60.0
 cffi==1.17.1
-pyinstaller==6.11.0
+pyinstaller==6.11.1
 six==1.16.0
 xxhash==3.5.0
 pooch==1.8.2
@@ -134,3 +133,11 @@ transformers==4.46.1
 librosa==0.10.2.post1
 customtkinter==5.2.2
 pydub==0.25.1
+pip==24.3.1
+cryptography==43.0.3
+Eel==0.17.0
+gevent==24.10.3
+bottle==0.13.2
+whichcraft==0.6.1
+zstandard==0.23.0
+Nuitka==2.4.11
