--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+repos:
 - repo: https://github.com/pre-commit/mirrors-black
   rev: v23.3.0
   hooks:
@@ -12,3 +13,8 @@
   rev: v5.11.4
   hooks:
     - id: isort
+
+-   repo: https://github.com/hhatto/autopep8
+    rev: ...  # select the tag or revision you want, or run `pre-commit autoupdate`
+    hooks:
+      -   id: autopep8
