--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,143 @@
-flatbuffers==24.3.25
-ipython==8.29.0
-numpy==2.1.3
-typing_extensions==4.12.2
-future==1.0.0
-pillow==11.0.0
-attrs==24.2.0
-wheel==0.45.0
-Jinja2==3.1.4
-setuptools==75.4.0
-dill==0.3.9
-gast==0.6.0
-h5py==3.12.1
-pytest==8.3.3
-parso==0.8.4
-jedi==0.19.1
-colorama==0.4.6
-mock==5.1.0
-nltk==3.9.1
-matplotlib==3.9.2
-regex==2024.9.11
-scipy==1.14.1
-scikit-learn==1.5.2
-click==8.1.7
-tqdm==4.67.0
-requests==2.32.3
-pyparsing==3.2.0
-pytz==2024.2
-rich==13.9.4
-Pygments==2.18.0
-keras==3.6.0
-PyYAML==6.0.2
-idna==3.10
-multidict==6.1.0
-propcache==0.2.0
-sniffio==1.3.1
-isort==5.13.2
-optree==0.13.0
-tensorflow==2.18.0
-packaging==24.2
-torch==2.5.1
-pandas==2.2.3
-namex==0.0.8
-mdurl==0.1.2
-llvmlite==0.43.0
-numba==0.60.0
-cffi==1.17.1
-pyinstaller==6.11.1
-six==1.16.0
-xxhash==3.5.0
-pooch==1.8.2
-platformdirs==4.3.6
-threadpoolctl==3.5.0
-mpmath==1.3.0
-sympy==1.13.1
-decorator==5.1.1
-astunparse==1.6.3
-tensorboard==2.18.0
-opt_einsum==3.4.0
-filelock==3.16.1
-urllib3==2.2.3
-fsspec==2024.10.0
-aiohttp==3.10.10
-yarl==1.17.1
-gensim==4.3.3
-MarkupSafe==3.0.2
-joblib==1.4.2
-pyarrow==18.0.0
-SQLAlchemy==2.0.36
-python-dateutil==2.9.0.post0
-plotly==5.24.1
-tenacity==9.0.0
-traitlets==5.14.3
-pylint==3.3.1
-astroid==3.3.5
-tomlkit==0.13.2
-mccabe==0.7.0
-pynput==1.7.7
-wcwidth==0.2.13
-pluggy==1.5.0
-iniconfig==2.0.0
-aiosignal==1.3.1
-frozenlist==1.5.0
-aiohappyeyeballs==2.4.3
-certifi==2024.8.30
-fastapi==0.115.4
-starlette==0.41.2
-pydantic==2.9.2
-pydantic_core==2.26.0
-anyio==4.6.2.post1
-imageio==2.36.0
-prompt_toolkit==3.0.48
-soundfile==0.12.1
-audioread==3.0.1
-soxr==0.5.0.post1
-lazy_loader==0.4
-msgpack==1.1.0
-moviepy==1.0.3
-proglog==0.1.10
-plotter==1.3.20
-tzdata==2024.2
-seaborn==0.13.2
-cycler==0.12.1
-datasets==3.1.0
-xgboost==2.1.2
-altgraph==0.17.4
-multiprocess==0.70.17
-greenlet==3.1.1
-httplib2==0.22.0
-Markdown==3.7
-networkx==3.4.2
-tf_keras==2.18.0
-wrapt==1.16.0
-asttokens==2.4.1
-contourpy==1.3.0
-cx_Freeze==7.2.5
-lief==0.15.1
-executing==2.1.0
-fonttools==4.54.1
-magicmock==0.3
-pure_eval==0.2.3
-pycparser==2.22
-termcolor==2.5.0
-wordcloud==1.9.4
-darkdetect==0.8.0
-kiwisolver==1.4.7
-pefile==2024.8.26
-tokenizers==0.20.3
-pycodestyle==2.12.1
-safetensors==0.4.5
-Werkzeug==3.1.3
-transformers==4.46.2
-librosa==0.10.2.post1
-customtkinter==5.2.2
-pydub==0.25.1
-pip==24.3.1
-cryptography==43.0.3
-Eel==0.17.0
-gevent==24.11.1
-bottle==0.13.2
-whichcraft==0.6.1
-zstandard==0.23.0
-Nuitka==2.4.11
+flatbuffers~=24.3.25
+ipython~=8.29.0
+numpy~=2.1.3
+typing_extensions~=4.12.2
+future~=1.0.0
+pillow~=11.0.0
+attrs~=24.2.0
+wheel~=0.45.0
+Jinja2~=3.1.4
+setuptools~=75.4.0
+dill~=0.3.9
+gast~=0.6.0
+h5py~=3.12.1
+pytest~=8.3.3
+parso~=0.8.4
+jedi~=0.19.1
+colorama~=0.4.6
+mock~=5.1.0
+nltk~=3.9.1
+matplotlib~=3.9.2
+regex~=2024.9.11
+scipy~=1.14.1
+scikit-learn~=1.5.2
+click~=8.1.7
+tqdm~=4.67.0
+requests~=2.32.3
+pyparsing~=3.2.0
+pytz~=2024.2
+rich~=13.9.4
+Pygments~=2.18.0
+keras~=3.6.0
+PyYAML~=6.0.2
+idna~=3.10
+multidict~=6.1.0
+propcache~=0.2.0
+sniffio~=1.3.1
+isort~=5.13.2
+optree~=0.13.0
+tensorflow~=2.18.0
+packaging~=24.2
+torch~=2.5.1
+pandas~=2.2.3
+namex~=0.0.8
+mdurl~=0.1.2
+llvmlite~=0.43.0
+numba~=0.60.0
+cffi~=1.17.1
+pyinstaller~=6.11.1
+six~=1.16.0
+xxhash~=3.5.0
+pooch~=1.8.2
+platformdirs~=4.3.6
+threadpoolctl~=3.5.0
+mpmath~=1.3.0
+sympy~=1.13.1
+decorator~=5.1.1
+astunparse~=1.6.3
+tensorboard~=2.18.0
+opt_einsum~=3.4.0
+filelock~=3.16.1
+urllib3~=2.2.3
+fsspec~=2024.10.0
+aiohttp~=3.10.10
+yarl~=1.17.1
+gensim~=4.3.3
+MarkupSafe~=3.0.2
+joblib~=1.4.2
+pyarrow~=18.0.0
+SQLAlchemy~=2.0.36
+python-dateutil~=2.9.0.post0
+plotly~=5.24.1
+tenacity~=9.0.0
+traitlets~=5.14.3
+pylint~=3.3.1
+astroid~=3.3.5
+tomlkit~=0.13.2
+mccabe~=0.7.0
+pynput~=1.7.7
+wcwidth~=0.2.13
+pluggy~=1.5.0
+iniconfig~=2.0.0
+aiosignal~=1.3.1
+frozenlist~=1.5.0
+aiohappyeyeballs~=2.4.3
+certifi~=2024.8.30
+fastapi~=0.115.4
+starlette~=0.41.2
+pydantic~=2.9.2
+pydantic_core~=2.26.0
+anyio~=4.6.2.post1
+imageio~=2.36.0
+prompt_toolkit~=3.0.48
+soundfile~=0.12.1
+audioread~=3.0.1
+soxr~=0.5.0.post1
+lazy_loader~=0.4
+msgpack~=1.1.0
+moviepy~=1.0.3
+proglog~=0.1.10
+plotter~=1.3.20
+tzdata~=2024.2
+seaborn~=0.13.2
+cycler~=0.12.1
+datasets~=3.1.0
+xgboost~=2.1.2
+altgraph~=0.17.4
+multiprocess~=0.70.17
+greenlet~=3.1.1
+httplib2~=0.22.0
+Markdown~=3.7
+networkx~=3.4.2
+tf_keras~=2.18.0
+wrapt~=1.16.0
+asttokens~=2.4.1
+contourpy~=1.3.0
+cx_Freeze~=7.2.5
+lief~=0.15.1
+executing~=2.1.0
+fonttools~=4.54.1
+magicmock~=0.3
+pure_eval~=0.2.3
+pycparser~=2.22
+termcolor~=2.5.0
+wordcloud~=1.9.4
+darkdetect~=0.8.0
+kiwisolver~=1.4.7
+pefile~=2024.8.26
+tokenizers~=0.20.3
+pycodestyle~=2.12.1
+safetensors~=0.4.5
+Werkzeug~=3.1.3
+transformers~=4.46.2
+librosa~=0.10.2.post1
+customtkinter~=5.2.2
+pydub~=0.25.1
+pip~=24.3.1
+cryptography~=43.0.3
+Eel~=0.17.0
+gevent~=24.11.1
+bottle~=0.13.2
+whichcraft~=0.6.1
+zstandard~=0.23.0
+Nuitka~=2.4.11
