--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 numpy~=2.0.2
 typing_extensions~=4.12.2
 pillow~=11.0.0
-pip~=23.2.1
 wheel~=0.41.2
 requests~=2.32.3
 colorama~=0.4.6
 PyYAML~=6.0.2
 numba~=0.60.0
 llvmlite~=0.43.0
-setuptools~=68.2.0
+setuptools~=70.0.0
 cffi~=1.17.1
 scipy~=1.14.1
 regex~=2024.11.6
@@ -43,3 +42,34 @@ msgpack~=1.1.0
 customtkinter~=5.2.2
 librosa~=0.10.2.post1
 pydub~=0.25.1
+style~=1.1.0
+gast~=0.6.0
+h5py~=3.12.1
+rich~=13.9.4
+Pygments~=2.18.0
+keras~=3.6.0
+optree~=0.13.1
+tensorflow~=2.18.0
+namex~=0.0.8
+mdurl~=0.1.2
+decorator~=5.1.1
+update~=0.0.1
+audioread~=3.0.1
+soxr~=0.5.0.post1
+Markdown~=3.7
+MarkupSafe~=3.0.2
+termcolor~=2.5.0
+opt_einsum~=3.4.0
+flatbuffers~=24.3.25
+wrapt~=1.16.0
+astunparse~=1.6.3
+tensorboard~=2.18.0
+Werkzeug~=3.1.3
+mpmath~=1.3.0
+sympy~=1.13.1
+pip~=24.3.1
+torch~=2.5.1
+Jinja2~=3.1.4
+torchvision~=0.20.1
+networkx~=3.4.2
+torchaudio~=2.5.1
