--- a/requirements.txt
+++ b/requirements.txt
@@ -73,3 +73,10 @@ Jinja2~=3.1.4
 torchvision~=0.20.1
 networkx~=3.4.2
 torchaudio~=2.5.1
+pytest~=8.3.3
+pyinstaller~=6.11.1
+pluggy~=1.5.0
+iniconfig~=2.0.0
+altgraph~=0.17.4
+tf_keras~=2.18.0
+pefile~=2023.2.7
