requirements.txt updated for compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy~=2.0.2
+
 typing_extensions~=4.12.2
 pillow~=11.0.0
 wheel~=0.41.2
@@ -52,7 +52,7 @@ optree~=0.13.1
 tensorflow~=2.18.0
 namex~=0.0.8
 mdurl~=0.1.2
-decorator~=5.1.1
+decorator~=4.4.2
 update~=0.0.1
 audioread~=3.0.1
 soxr~=0.5.0.post1
@@ -80,3 +80,7 @@ iniconfig~=2.0.0
 altgraph~=0.17.4
 tf_keras~=2.18.0
 pefile~=2023.2.7
+numpy~=2.0.0
+imageio~=2.36.0
+moviepy~=1.0.3
+proglog~=0.1.10
