--- a/requirements.txt
+++ b/requirements.txt
@@ -73,3 +73,24 @@ safetensors~=0.4.5
 transformers~=4.46.2
 librosa~=0.10.2.post1
 pydub~=0.25.1
+gitdb~=4.0.11
+attrs~=24.2.0
+tornado~=6.4.1
+pytz~=2024.2
+toml~=0.10.2
+smmap~=5.0.1
+pandas~=2.2.3
+altair~=5.4.1
+jsonschema~=4.23.0
+narwhals~=1.13.5
+pyarrow~=18.0.0
+referencing~=0.35.1
+pydeck~=0.9.1
+tzdata~=2024.2
+tenacity~=9.0.0
+tf_keras~=2.18.0
+watchdog~=6.0.0
+click~=8.1.7
+streamlit~=1.40.1
+cachetools~=5.5.0
+blinker~=1.9.0
