--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,98 @@
-
-wheel~=0.41.2
-setuptools~=70.0.0
-altgraph~=0.17.4
-packaging~=24.2
-pefile~=2023.2.7
-pyinstaller~=6.11.1
-pip~=23.3.2
-namex~=0.0.8
-numpy~=2.0.2
-sympy~=1.13.1
-mpmath~=1.3.0
-joblib~=1.4.2
+gitdb~=4.0.11
 typing_extensions~=4.12.2
-urllib3~=2.2.3
-networkx~=3.4.2
-Pygments~=2.18.0
-pycparser~=2.22
-termcolor~=2.5.0
-darkdetect~=0.8.0
-opt_einsum~=3.4.0
-platformdirs~=4.3.6
-customtkinter~=5.2.2
+numpy~=2.0.2
+pillow~=11.0.0
+pip~=24.3.1
+attrs~=24.2.0
+wheel~=0.41.2
 filelock~=3.16.1
+setuptools~=70.0.0
 gast~=0.6.0
 h5py~=3.12.1
-optree~=0.13.1
-torch~=2.5.1
-requests~=2.32.3
-mdurl~=0.1.2
-six~=1.16.0
-astunparse~=1.6.3
-tensorboard~=2.18.0
-fsspec~=2024.10.0
-MarkupSafe~=3.0.2
-certifi~=2024.8.30
-Markdown~=3.7
-idna~=3.10
-flatbuffers~=24.3.25
-wrapt~=1.16.0
-Werkzeug~=3.1.3
+pytz~=2024.2
 rich~=13.9.4
+Pygments~=2.18.0
+toml~=0.10.2
+requests~=2.32.3
 keras~=3.6.0
-tensorflow~=2.18.0
-pillow~=11.0.0
-Jinja2~=3.1.4
 colorama~=0.4.6
 PyYAML~=6.0.2
+smmap~=5.0.1
+optree~=0.13.1
+tensorflow~=2.18.0
+packaging~=24.2
 scipy~=1.14.1
+torch~=2.5.1
+pandas~=2.2.3
+namex~=0.0.8
+mdurl~=0.1.2
 llvmlite~=0.43.0
 numba~=0.60.0
 cffi~=1.17.1
+Jinja2~=3.1.4
+pyinstaller~=6.11.1
+six~=1.16.0
 pooch~=1.8.2
 tqdm~=4.67.0
+platformdirs~=4.3.6
 regex~=2024.11.6
 threadpoolctl~=3.5.0
 matplotlib~=3.9.2
-decorator~=5.1.1
+mpmath~=1.3.0
+sympy~=1.13.1
+decorator~=4.4.2
+astunparse~=1.6.3
+tensorboard~=2.18.0
+opt_einsum~=3.4.0
+urllib3~=2.2.3
+fsspec~=2024.10.0
+altair~=5.4.1
+jsonschema~=4.23.0
+narwhals~=1.13.5
+pyarrow~=18.0.0
+referencing~=0.35.1
+MarkupSafe~=3.0.2
+joblib~=1.4.2
+python-dateutil~=2.9.0.post0
+pydeck~=0.9.1
+certifi~=2024.8.30
+imageio~=2.36.0
 soundfile~=0.12.1
 audioread~=3.0.1
 soxr~=0.5.0.post1
 lazy_loader~=0.4
 msgpack~=1.1.0
 scikit-learn~=1.5.2
-python-dateutil~=2.9.0.post0
-contourpy~=1.3.1
-fonttools~=4.54.1
-pyparsing~=3.2.0
-cycler~=0.12.1
-kiwisolver~=1.4.7
-tokenizers~=0.20.3
-safetensors~=0.4.5
-transformers~=4.46.2
-librosa~=0.10.2.post1
-pydub~=0.25.1
-gitdb~=4.0.11
-attrs~=24.2.0
-tornado~=6.4.1
-pytz~=2024.2
-toml~=0.10.2
-smmap~=5.0.1
-pandas~=2.2.3
-altair~=5.4.1
-jsonschema~=4.23.0
-narwhals~=1.13.5
-pyarrow~=18.0.0
-referencing~=0.35.1
-pydeck~=0.9.1
+moviepy~=1.0.3
+proglog~=0.1.10
 tzdata~=2024.2
+tornado~=6.4.1
+altgraph~=0.17.4
+Markdown~=3.7
+networkx~=3.4.2
+idna~=3.10
 tenacity~=9.0.0
 tf_keras~=2.18.0
+wrapt~=1.16.0
 watchdog~=6.0.0
+contourpy~=1.3.1
+fonttools~=4.54.1
+pycparser~=2.22
+pyparsing~=3.2.0
 click~=8.1.7
 streamlit~=1.40.1
 cachetools~=5.5.0
 blinker~=1.9.0
+termcolor~=2.5.0
+darkdetect~=0.8.0
+cycler~=0.12.1
+kiwisolver~=1.4.7
+pefile~=2023.2.7
+flatbuffers~=24.3.25
+tokenizers~=0.20.3
+safetensors~=0.4.5
+Werkzeug~=3.1.3
+transformers~=4.46.2
+librosa~=0.10.2.post1
+customtkinter~=5.2.2
+pydub~=0.25.1
