Adding new requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -112,3 +112,15 @@ soxr~=0.5.0.post1
 lazy_loader~=0.4
 msgpack~=1.1.0
 librosa~=0.10.2.post1
+gitdb~=4.0.11
+toml~=0.10.2
+smmap~=5.0.1
+altair~=5.5.0
+jsonschema~=4.23.0
+narwhals~=1.14.2
+referencing~=0.35.1
+pydeck~=0.9.1
+tornado~=6.4.2
+tenacity~=9.0.0
+watchdog~=6.0.0
+streamlit~=1.40.2
