--- a/requirements.txt
+++ b/requirements.txt
@@ -1,127 +1,14 @@
-DateTime~=5.4
-typing_extensions~=4.12.2
 numpy~=1.26.4
-future~=0.18.3
-Pillow~=10.0.0
-olefile~=0.46
-pip~=24.3.1
-attrs~=23.1.0
-wheel~=0.40.0
-cryptography~=41.0.3
-filelock~=3.12.2
+pillow~=10.0.0
 setuptools~=68.0.0
-dill~=0.3.6
-scikit-learn~=1.2.2
-scipy~=1.10.1
-tqdm~=4.65.0
-pytz~=2023.3
 matplotlib~=3.7.1
-pandas~=2.0.3
-opencv-python~=4.7.0.72
-packaging~=23.1
-cloudpickle~=2.2.1
-requests~=2.31.0
-colorama~=0.4.6
-PyRECONSTRUCT~=2.2.0
-PyYAML~=6.0.1
-click~=8.1.3
-psutil~=5.9.5
-torch~=2.5.1
-cffi~=1.15.1
-coverage~=7.4.1
-Jinja2~=3.1.2
-six~=1.16.0
-xxhash~=3.2.0
-regex~=2023.6.3
-threadpoolctl~=3.1.0
-mpmath~=1.3.0
-sympy~=1.13.1
-lark-parser~=0.12.0
-tabulate~=0.9.0
-torchvision~=0.20.1
-urllib3~=2.0.4
-fsspec~=2023.6.0
-pyarrow~=12.0.1
-aiohttp~=3.8.5
-multidict~=6.0.4
-yarl~=1.9.2
-MarkupSafe~=2.1.3
 joblib~=1.2.0
-xlrd~=2.0.1
-openpyxl~=3.1.2
-lxml~=4.9.2
-python-dateutil~=2.8.2
-certifi~=2023.7.22
-responses~=0.23.3
-tzdata~=2023.3
-networkx~=3.1
-datasets~=2.14.4
-Deprecated~=1.2.14
-idna~=3.4
-chardet~=5.1.0
-wrapt~=1.15.0
-contourpy~=1.1.0
-fonttools~=4.40.0
-pycparser~=2.21
-pyparsing~=3.0.9
-itsdangerous~=2.1.2
-cachetools~=5.3.1
-blinker~=1.6.2
-cycler~=0.11.0
-kiwisolver~=1.4.4
-tokenizers~=0.13.3
-argcomplete~=3.1.1
-safetensors~=0.3.1
-botocore~=1.29.153
-boto3~=1.26.153
-Werkzeug~=2.3.6
+scikit-learn~=1.2.2
+streamlit~=1.40.1
 transformers~=4.31.0
-accelerate~=0.20.3
-sentencepiece~=0.1.99
-gdown~=4.7.1
-beautifulsoup4~=4.12.2
-pytesseract~=0.3.10
-gast~=0.6.0
-h5py~=3.12.1
-rich~=13.9.4
-Pygments~=2.18.0
-keras~=3.7.0
-optree~=0.13.1
-tensorflow~=2.18.0
-namex~=0.0.8
-mdurl~=0.1.2
-astunparse~=1.6.3
-tensorboard~=2.18.0
-opt_einsum~=3.4.0
-Markdown~=3.7
-tf_keras~=2.18.0
-termcolor~=2.5.0
-darkdetect~=0.8.0
-flatbuffers~=24.3.25
-torchaudio~=2.5.1
-customtkinter~=5.2.2
-numba~=0.60.0
-platformdirs~=4.3.6
-llvmlite~=0.43.0
-pooch~=1.8.2
-decorator~=5.1.1
-soundfile~=0.12.1
-audioread~=3.0.1
-soxr~=0.5.0.post1
-lazy_loader~=0.4
-msgpack~=1.1.0
 librosa~=0.10.2.post1
-gitdb~=4.0.11
-toml~=0.10.2
-smmap~=5.0.1
-altair~=5.5.0
-jsonschema~=4.23.0
-narwhals~=1.14.2
-referencing~=0.35.1
-pydeck~=0.9.1
-tornado~=6.4.2
-tenacity~=9.0.0
-watchdog~=6.0.0
-streamlit~=1.40.2
-mutagen~=1.47.0
+customtkinter~=5.2.2
 pydub~=0.25.1
+mutagen~=1.47.0
+future~=0.18.3
+DateTime~=5.4
