--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ scikit-learn~=1.5.2
 streamlit~=1.40.1
 transformers~=4.46.2
 librosa~=0.10.2.post1
-customtkinter~=5.2.2
+customtkinter==5.2.2
 pydub~=0.25.1
 mutagen~=1.47.0
 future~=0.18.3
