--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-numpy~=2.0.0
+numpy~=2.0.2
 pillow~=11.0.0
 setuptools~=70.0.0
 matplotlib~=3.9.2
 joblib~=1.4.2
 scikit-learn~=1.5.2
-streamlit~=1.40.1
-transformers~=4.46.2
+streamlit~=1.40.2
+transformers~=4.46.3
 librosa~=0.10.2.post1
-customtkinter==5.2.2
+customtkinter~=5.2.2
 pydub~=0.25.1
 mutagen~=1.47.0
 future~=0.18.3
-DateTime~=5.4
+DateTime~=5.5
 tensorflow-hub~=0.16.1
 tensorflow~=2.18.0
 pytest~=8.3.3
