--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 gitdb==4.0.11
 typing_extensions==4.12.2
-numpy==2.0.0
-pillow==11.0.0
+numpy~=2.0.0
+pillow~=11.0.0
 pip==24.3.1
 attrs==24.2.0
 wheel==0.41.2
 filelock==3.16.1
-setuptools==70.0.0
+setuptools~=70.0.0
 dill==0.3.9
 gast==0.6.0
 h5py==3.12.1
@@ -42,7 +42,7 @@ pooch==1.8.2
 tqdm==4.67.0
 regex==2024.11.6
 threadpoolctl==3.5.0
-matplotlib==3.9.2
+matplotlib~=3.9.2
 mpmath==1.3.0
 sympy==1.13.1
 decorator==4.4.2
@@ -57,7 +57,7 @@ narwhals==1.13.5
 pyarrow==18.0.0
 referencing==0.35.1
 MarkupSafe==3.0.2
-joblib==1.4.2
+joblib~=1.4.2
 python-dateutil==2.9.0.post0
 pydeck==0.9.1
 pylint==3.3.1
@@ -71,7 +71,7 @@ audioread==3.0.1
 soxr==0.5.0.post1
 lazy_loader==0.4
 msgpack==1.1.0
-scikit-learn==1.5.2
+scikit-learn~=1.5.2
 moviepy==1.0.3
 proglog==0.1.10
 tzdata==2024.2
@@ -88,7 +88,7 @@ contourpy==1.3.1
 fonttools==4.54.1
 pycparser==2.22
 pyparsing==3.2.0
-streamlit==1.40.1
+streamlit~=1.40.1
 cachetools==5.5.0
 blinker==1.9.0
 termcolor==2.5.0
@@ -101,11 +101,11 @@ tokenizers==0.20.3
 pycodestyle==2.12.1
 safetensors==0.4.5
 Werkzeug==3.1.3
-transformers==4.46.2
-librosa==0.10.2.post1
-customtkinter==5.2.2
-pydub==0.25.1
-future==0.18.3
-mutagen==1.47.0
-DateTime==5.5
-pytest==8.3.3
+transformers~=4.46.2
+librosa~=0.10.2.post1
+customtkinter~=5.2.2
+pydub~=0.25.1
+future~=0.18.3
+mutagen~=1.47.0
+DateTime~=5.5
+pytest~=8.3.3
