--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,23 @@
-style==1.1.6
-pip==23.2.1
-attrs==24.2.0
-DateTime==5.5
-wheel==0.41.3
-cryptography==44.0.0
-pillow==11.0.0
-tornado==6.4.2
-Jinja2==3.1.4
-requests==2.32.3
-streamlit==1.40.2
-setuptools==75.6.0
-numpy==2.0.2
-joblib==1.4.2
-librosa==0.10.2.post1
-scikit-learn==1.5.2
-matplotlib==3.9.2
-customtkinter==5.2.2
-future==0.18.3
-mutagen==1.47.0
-transformers==4.46.3
-pydub==0.25.1
-pytest==8.3.3
-altgraph==0.17.4
-packaging==24.2
-pefile==2023.2.7
-filelock==3.16.1
-typing_extensions==4.12.2
-platformdirs==4.3.6
-Pygments==2.18.0
-pyinstaller==6.11.1
-cffi==1.17.1
+style~=1.1.6
+pip~=23.2.1
+attrs~=24.2.0
+DateTime~=5.5
+wheel~=0.41.3
+cryptography~=44.0.0
+pillow~=11.0.0
+tornado~=6.4.2
+Jinja2~=3.1.4
+requests~=2.32.3
+streamlit~=1.40.2
+setuptools~=70.0.0
+numpy~=2.0.2
+joblib~=1.4.2
+librosa~=0.10.2.post1
+scikit-learn~=1.5.2
+matplotlib~=3.9.2
+customtkinter~=5.2.2
+future~=0.18.3
+mutagen~=1.47.0
+transformers~=4.46.3
+pydub~=0.25.1
+pytest~=8.3.3
