--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ click~=8.1.7
 smmap~=5.0.1
 isort~=5.13.2
 optree==0.13.1
-tensorflow==2.18.0
+tensorflow~=2.18.0
 scipy==1.14.1
 torch==2.5.1
 pandas==2.2.3
