--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 gitdb~=4.0.11
 typing_extensions==4.12.2
-numpy~=2.1.3
+numpy==2.0.2
 pillow==11.0.0
 pip==23.2.1
 attrs==24.2.0
-wheel==0.41.3
+wheel==0.45.1
 filelock==3.16.1
 setuptools==75.6.0
-dill~=0.3.9
-gast~=0.6.0
-h5py~=3.12.1
+dill==0.3.9
+gast==0.6.0
+h5py==3.12.1
 pytz==2024.2
-rich~=13.9.4
+rich==13.9.4
 Pygments==2.18.0
 toml~=0.10.2
 requests==2.32.3
-keras~=3.6.0
+keras==3.7.0
 colorama==0.4.6
 PyYAML==6.0.2
 black~=24.10.0
@@ -26,18 +26,18 @@ click~=8.1.7
 smmap~=5.0.1
 isort~=5.13.2
 optree==0.13.1
-tensorflow~=2.18.0
+tensorflow==2.18.0
 scipy==1.14.1
 torch==2.5.1
 pandas==2.2.3
-namex~=0.0.8
-mdurl~=0.1.2
+namex==0.0.8
+mdurl==0.1.2
 llvmlite~=0.43.0
 numba==0.60.0
 cffi==1.17.1
 Jinja2==3.1.4
 pyinstaller==6.11.1
-six~=1.16.0
+six==1.16.0
 pooch~=1.8.2
 tqdm==4.67.1
 regex==2024.11.6
@@ -77,12 +77,12 @@ proglog~=0.1.10
 tzdata~=2024.2
 tornado==6.4.2
 altgraph==0.17.4
-Markdown~=3.7
+Markdown==3.7
 networkx==3.4.2
-idna~=3.10
+idna==3.10
 tenacity~=9.0.0
-tf_keras~=2.18.0
-wrapt~=1.16.0
+tf_keras==2.18.0
+wrapt==1.17.0
 watchdog==6.0.0
 contourpy~=1.3.1
 fonttools~=4.54.1
@@ -91,16 +91,16 @@ pyparsing~=3.2.0
 streamlit==1.40.2
 cachetools~=5.5.0
 blinker~=1.9.0
-termcolor~=2.5.0
+termcolor==2.5.0
 darkdetect~=0.8.0
 cycler~=0.12.1
 kiwisolver~=1.4.7
 pefile==2023.2.7
-flatbuffers~=24.3.25
+flatbuffers==24.3.25
 tokenizers~=0.20.3
 pycodestyle~=2.12.1
 safetensors~=0.4.5
-Werkzeug~=3.1.3
+Werkzeug==3.1.3
 transformers==4.46.3
 librosa==0.10.2.post1
 customtkinter==5.2.2
@@ -113,10 +113,14 @@ wave~=0.0.2
 tensorflow-hub~=0.16.1
 messagebox~=0.1.0
 tk==0.1.0
+
 opencv-python==4.10.0.84
 style==1.1.6
 cryptography==44.0.0
 docutils==0.21.2
-pypandoc==1.14
+
+plyer==2.1.0
 torchvision==0.20.1
 torchaudio==2.5.1
+
+pypandoc==1.14
