--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,9 @@ setuptools~=75.6.0
 dill~=0.3.9
 gast~=0.6.0
 h5py~=3.12.1
-pytz~=2024.2
 rich~=13.9.4
 Pygments~=2.18.0
 requests~=2.32.3
-keras~=3.7.0
 colorama~=0.4.6
 PyYAML~=6.0.2
 platformdirs~=4.3.6
@@ -32,7 +30,6 @@ pyinstaller~=6.11.1
 six~=1.16.0
 tqdm~=4.67.1
 regex~=2024.11.6
-matplotlib~=3.9.3
 mpmath~=1.3.0
 sympy~=1.13.1
 decorator~=4.4.2
@@ -74,9 +71,4 @@ torchvision~=0.20.1
 torchaudio~=2.5.1
 pypandoc~=1.14
 ffmpeg~=1.4
-python-dateutil~=2.9.0.post0
-cycler~=0.12.1
-pyparsing~=3.2.0
-contourpy~=1.3.1
-fonttools~=4.54.1
-kiwisolver~=1.4.7
+matplotlib==3.9.2
