Cleaned up windows version and thats it

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-numpy==2.0.2
+numpy~=2.0.2
 typing_extensions==4.12.2
-future==0.18.3
-pillow==9.5
-DateTime==5.5
+future~=0.18.3
+pillow~=9.5.0
+DateTime~=5.5
 gast==0.6.0
 h5py==3.12.1
-pytest==8.3.3
+pytest~=8.3.3
 decorator==4.4.2
 mdurl==0.1.2
 six==1.16.0
-torch==2.5.1
-matplotlib==3.9.2
+torch~=2.5.1
+matplotlib~=3.9.2
 astunparse==1.6.3
-setuptools==75.6.0
-tensorflow==2.18.0
+setuptools~=75.6.0
+tensorflow~=2.18.0
 scipy==1.14.1
 packaging==24.2
 opt_einsum==3.4.0
@@ -25,11 +25,12 @@ flatbuffers==24.3.25
 dill==0.3.9
 cffi==1.17.1
 pyinstaller==6.11.1
-joblib==1.4.2
-librosa==0.10.2.post1
-scikit-learn==1.5.2
-customtkinter==5.2.2
-mutagen==1.47.0
-transformers==4.46.3
-pydub==0.25.1
+joblib~=1.4.2
+librosa~=0.10.2.post1
+scikit-learn~=1.5.2
+customtkinter~=5.2.2
+mutagen~=1.47.0
+transformers~=4.46.3
+pydub~=0.25.1
 opencv-python~=4.10.0.84
+pypandoc~=1.14
