Cleaned up windows version and thats it

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-future~=0.18.3
-DateTime~=5.5
-pytest~=8.3.4
-setuptools~=75.6.0
-joblib~=1.4.2
-librosa~=0.10.2.post1
-scikit-learn~=1.6.0
-customtkinter~=5.2.2
-mutagen~=1.47.0
-pydub~=0.25.1
-opencv-python~=4.10.0.84
-pypandoc~=1.14
-numpy~=2.0.2
-matplotlib~=3.10.0
-pillow~=10.4.0
-tensorflow~=2.18.0
-torch~=2.5.1
-transformers~=4.47.1
+pypandoc
+setuptools
+numpy
+joblib
+librosa
+scikit-learn
+matplotlib
+customtkinter
+pillow
+future
+opencv-python
+tensorflow
+torch
+DateTime
+mutagen
+transformers
+pydub
+pytest
