Cleaned up windows version and thats it

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,76 @@ mutagen
 transformers
 pydub
 pytest
+pip
+wheel
+protobuf
+Jinja2
+absl-py
+cffi
+gast
+grpcio
+h5py
+pytz
+rich
+Pygments
+markdown-it-py
+typing_extensions
+requests
+keras
+colorama
+PyYAML
+libclang
+ml-dtypes
+optree
+packaging
+huggingface-hub
+scipy
+namex
+mdurl
+llvmlite
+numba
+charset-normalizer
+six
+google-pasta
+pooch
+tqdm
+platformdirs
+regex
+threadpoolctl
+mpmath
+sympy
+decorator
+astunparse
+tensorboard
+opt_einsum
+filelock
+urllib3
+fsspec
+MarkupSafe
+pluggy
+exceptiongroup
+iniconfig
+certifi
+soundfile
+audioread
+soxr
+lazy_loader
+msgpack
+python-dateutil
+Markdown
+networkx
+idna
+contourpy
+fonttools
+pycparser
+pyparsing
+termcolor
+darkdetect
+cycler
+kiwisolver
+tomli
+flatbuffers
+wrapt
+tokenizers
+safetensors
+Werkzeug
