--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,28 @@
-pypandoc
-setuptools
 numpy
-joblib
-librosa
-scikit-learn
-matplotlib
-customtkinter
 pillow
-future
-opencv-python
-tensorflow
-torch
-DateTime
-mutagen
-transformers
-pydub
-pytest
 pip
-wheel
-protobuf
-Jinja2
-absl-py
-cffi
-gast
-grpcio
-h5py
-pytz
-rich
-Pygments
-markdown-it-py
+setuptools
 typing_extensions
-requests
 keras
-colorama
-PyYAML
-libclang
-ml-dtypes
-optree
+tensorflow
 packaging
-huggingface-hub
 scipy
-namex
-mdurl
-llvmlite
-numba
-charset-normalizer
+matplotlib
+pyinstaller
 six
-google-pasta
-pooch
-tqdm
-platformdirs
-regex
 threadpoolctl
-mpmath
-sympy
-decorator
-astunparse
-tensorboard
-opt_einsum
-filelock
 urllib3
-fsspec
-MarkupSafe
-pluggy
-exceptiongroup
-iniconfig
-certifi
-soundfile
-audioread
 soxr
-lazy_loader
-msgpack
+altgraph
 python-dateutil
-Markdown
-networkx
-idna
 contourpy
 fonttools
-pycparser
+pefile
 pyparsing
-termcolor
 darkdetect
 cycler
 kiwisolver
-tomli
-flatbuffers
-wrapt
-tokenizers
-safetensors
-Werkzeug
+pywin32-ctypes
+tf_keras
+customtkinter
+pyinstaller-hooks-contrib
