Cleaned up windows version and thats it

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,69 @@ pywin32-ctypes
 tf_keras
 customtkinter
 pyinstaller-hooks-contrib
+attrs
+wheel
+protobuf
+tornado
+Jinja2
+absl-py
+cffi
+gast
+grpcio
+h5py
+pytz
+rich
+Pygments
+markdown-it-py
+requests
+colorama
+PyYAML
+libclang
+ml-dtypes
+optree
+huggingface-hub
+pandas
+namex
+mdurl
+llvmlite
+numba
+GitPython
+charset-normalizer
+google-pasta
+pooch
+tqdm
+platformdirs
+regex
+decorator
+astunparse
+tensorboard
+opt_einsum
+filelock
+fsspec
+lz4
+MarkupSafe
+joblib
+certifi
+soundfile
+audioread
+lazy_loader
+msgpack
+scikit-learn
+mutagen
+Markdown
+idna
+pycparser
+termcolor
+flatbuffers
+wrapt
+dill
+tokenizers
+safetensors
+botocore
+boto3
+Werkzeug
+transformers
+hub
+librosa
+pydantic
+pydub
