--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,20 @@ transformers
 librosa
 pydub
 sympy
-customtkinter
-matplotlib
 matplot
+nh3
+typing
+docutils
+keyring
+zipp
+twine
+readme_renderer
+rfc3986
+pkginfo
+requests-toolbelt
+more-itertools
+pyloco
+websocket-client
+ushlex
+SimpleWebSocketServer
+importlib_metadata
