--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,6 @@ pydub
 sympy
 matplot
 nh3
-typing
 docutils
 keyring
 zipp
@@ -63,3 +62,36 @@ websocket-client
 ushlex
 SimpleWebSocketServer
 importlib_metadata
+typing
+filelock
+keras
+colorama
+PyYAML
+llvmlite
+GitPython
+pooch
+tqdm
+platformdirs
+regex
+threadpoolctl
+torch
+mpmath
+decorator
+fsspec
+MarkupSafe
+soundfile
+audioread
+soxr
+lazy_loader
+msgpack
+pandas
+pycparser
+tokenizers
+safetensors
+tensorflow
+huggingface-hub
+torchvision
+ml-dtypes
+pydantic
+tf_keras
+h5py
