--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,6 @@ websocket-client
 ushlex
 SimpleWebSocketServer
 importlib_metadata
-typing
 filelock
 keras
 colorama
@@ -95,3 +94,30 @@ ml-dtypes
 pydantic
 tf_keras
 h5py
+gitdb
+absl-py
+gast
+grpcio
+libclang
+smmap
+optree
+namex
+google-pasta
+astunparse
+tensorboard
+opt_einsum
+pyarrow
+imageio
+imageio-ffmpeg
+moviepy
+proglog
+Markdown
+networkx
+pydantic_core
+annotated-types
+wrapt
+termcolor
+dill
+botocore
+boto3
+Werkzeug
