Checking for CPU or GPU Fixing OS path fixing path bugs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,125 @@
-numpy
-pillow
-pip
-setuptools
-typing_extensions
-packaging
-scipy
-matplotlib
-pyinstaller
-six
-urllib3
-altgraph
-python-dateutil
-contourpy
-fonttools
-pefile
-pyparsing
-darkdetect
-cycler
-kiwisolver
-pywin32-ctypes
-customtkinter
-pyinstaller-hooks-contrib
-attrs
-wheel
-protobuf
-tornado
-Jinja2
-cffi
-pytz
-rich
-Pygments
-markdown-it-py
-requests
-mdurl
-numba
-charset-normalizer
-lz4
-joblib
-certifi
-scikit-learn
-mutagen
-idna
-flatbuffers
-transformers
-librosa
-pydub
-sympy
-matplot
-nh3
-docutils
-keyring
-zipp
-twine
-readme_renderer
-rfc3986
-pkginfo
-requests-toolbelt
-more-itertools
-pyloco
-websocket-client
-ushlex
-SimpleWebSocketServer
-importlib_metadata
-filelock
-keras
-colorama
-PyYAML
-llvmlite
-GitPython
-pooch
-tqdm
-platformdirs
-regex
-threadpoolctl
-torch
-mpmath
-decorator
-fsspec
-MarkupSafe
-soundfile
-audioread
-soxr
-lazy_loader
-msgpack
-pandas
-pycparser
-tokenizers
-safetensors
-tensorflow
-huggingface-hub
-torchvision
-ml-dtypes
-pydantic
-tf_keras
-h5py
-gitdb
-absl-py
-gast
-grpcio
-libclang
-smmap
-optree
-namex
-google-pasta
-astunparse
-tensorboard
-opt_einsum
-pyarrow
-imageio
-imageio-ffmpeg
-moviepy
-proglog
-Markdown
-networkx
-pydantic_core
-annotated-types
-wrapt
-termcolor
-dill
-botocore
-boto3
-Werkzeug
-click
-python-dotenv
+numpy==1.26.4
+pillow==10.4.0
+pip==22.2.2
+setuptools==63.2.0
+typing_extensions==4.12.2
+packaging==24.2
+scipy==1.14.1
+matplotlib==3.10.0
+pyinstaller==6.11.1
+six==1.17.0
+urllib3==2.3.0
+altgraph==0.17.4
+python-dateutil==2.9.0.post0
+contourpy==1.3.1
+fonttools==4.55.3
+pefile==2023.2.7
+pyparsing==3.2.1
+darkdetect==0.8.0
+cycler==0.12.1
+kiwisolver==1.4.8
+pywin32-ctypes==0.2.3
+customtkinter==5.2.2
+pyinstaller-hooks-contrib==2024.11
+attrs==24.3.0
+wheel==0.45.1
+protobuf==5.29.2
+tornado==6.4.2
+Jinja2==3.1.5
+cffi==1.17.1
+pytz==2024.2
+rich==13.9.4
+Pygments==2.18.0
+markdown-it-py==3.0.0
+requests==2.32.3
+mdurl==0.1.2
+numba==0.60.0
+charset-normalizer==3.4.1
+lz4==4.3.3
+joblib==1.4.2
+certifi==2024.12.14
+scikit-learn==1.5.2
+mutagen==1.47.0
+idna==3.10
+flatbuffers==24.12.23
+transformers==4.47.1
+librosa==0.10.2.post1
+pydub==0.25.1
+sympy==1.13.1
+matplot==0.1.9
+nh3==0.2.20
+docutils==0.21.2
+keyring==25.6.0
+zipp==3.21.0
+twine==6.0.1
+readme_renderer==44.0
+rfc3986==2.0.0
+pkginfo==1.12.0
+requests-toolbelt==1.0.0
+more-itertools==10.5.0
+pyloco==0.0.139
+websocket-client==1.8.0
+ushlex==0.99.1
+SimpleWebSocketServer==0.1.2
+importlib_metadata==8.5.0
+filelock==3.16.1
+keras==3.7.0
+colorama==0.4.6
+PyYAML==6.0.2
+llvmlite==0.43.0
+GitPython==3.1.44
+pooch==1.8.2
+tqdm==4.67.1
+platformdirs==4.3.6
+regex==2024.11.6
+threadpoolctl==3.5.0
+torch==2.5.1
+mpmath==1.3.0
+decorator==5.1.1
+fsspec==2024.12.0
+MarkupSafe==3.0.2
+soundfile==0.12.1
+audioread==3.0.1
+soxr==0.5.0.post1
+lazy_loader==0.4
+msgpack==1.1.0
+pandas==2.2.3
+pycparser==2.22
+tokenizers==0.21.0
+safetensors==0.4.5
+tensorflow==2.18.0
+huggingface-hub==0.27.0
+torchvision==0.20.1
+ml-dtypes==0.4.1
+pydantic==2.10.4
+tf_keras==2.18.0
+h5py==3.12.1
+gitdb==4.0.12
+absl-py==2.1.0
+gast==0.6.0
+grpcio==1.68.1
+libclang==18.1.1
+smmap==5.0.2
+optree==0.13.1
+namex==0.0.8
+google-pasta==0.2.0
+astunparse==1.6.3
+tensorboard==2.18.0
+opt_einsum==3.4.0
+pyarrow==18.1.0
+imageio==2.36.1
+imageio-ffmpeg==0.5.1
+moviepy==2.1.1
+proglog==0.1.10
+Markdown==3.7
+networkx==3.4.2
+pydantic_core==2.27.2
+annotated-types==0.7.0
+wrapt==1.17.0
+termcolor==2.5.0
+dill==0.3.9
+botocore==1.35.90
+boto3==1.35.90
+Werkzeug==3.1.3
+click==8.1.8
+python-dotenv==1.0.1
