--- a/requirements.txt
+++ b/requirements.txt
@@ -1,164 +1,164 @@
-absl-py==2.1.0
-altair==5.5.0
-altgraph==0.17.4
-annotated-types==0.7.0
-astunparse==1.6.3
-attrs==24.3.0
-audioread==3.0.1
-blinker==1.9.0
-boto3==1.35.90
-botocore==1.35.90
-cachetools==5.5.0
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.1
-customtkinter==5.2.2
-cx_Freeze==7.2.10
-cx_Logging==3.2.1
-cycler==0.12.1
-darkdetect==0.8.0
-decorator==4.4.2
-deeplake==3.9.34
-dill==0.3.9
-docutils==0.21.2
-filelock==3.16.1
-filetype==1.2.0
-flatbuffers==24.12.23
-fonttools==4.55.3
-fsspec==2024.12.0
-gast==0.4.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.38.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.68.1
-h5py==3.12.1
-hub==3.0.1
-huggingface-hub==0.27.0
-humbug==0.3.2
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-jax==0.4.30
-jaxlib==0.4.30
-Jinja2==3.1.5
-jmespath==1.0.1
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-keras==3.8.0
-Kivy==2.3.1
-kivy-deps.angle==0.4.0
-kivy-deps.glew==0.3.1
-Kivy-Garden==0.1.5
-kivy_deps.sdl2==0.8.0
-kivymd==1.2.0
-kiwisolver==1.4.8
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.10.2.post1
-lief==0.16.3
-llvmlite==0.43.0
-lz4==4.3.3
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-mdurl==0.1.2
-ml-dtypes==0.4.1
-moviepy==1.0.3
-mpmath==1.3.0
-msgpack==1.1.0
-multiprocess==0.70.17
-mutagen==1.47.0
-namex==0.0.8
-narwhals==1.19.1
-networkx==3.4.2
-numba==0.60.0
-numpy==1.23.5
-oauthlib==3.2.2
-opt_einsum==3.4.0
-optree==0.13.1
-packaging==24.2
-pandas==2.2.3
-pathos==0.3.3
-pefile==2023.2.7
-pillow==10.4.0
-platformdirs==4.3.6
-plyer==2.1.0
-pooch==1.8.2
-pox==0.3.5
-ppft==1.7.6.9
-proglog==0.1.10
-protobuf==4.25.6
-py-splash==0.4.5
-pyarrow==18.1.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.10.4
-pydantic_core==2.27.2
-pydeck==0.9.1
-pydub==0.25.1
-Pygments==2.18.0
-pyinstaller==6.12.0
-pyinstaller-hooks-contrib==2025.1
-PyJWT==2.10.1
-pypandoc==1.15
-pyparsing==3.2.0
-pypiwin32==223
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.2
-PyQt5-stubs==5.15.6.0
-PyQt5_sip==12.16.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.2
-pywin32==308
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.9
-s3transfer==0.10.4
-safetensors==0.4.5
-scikit-learn==1.6.0
-scipy==1.14.1
-six==1.17.0
-smmap==5.0.1
-soundfile==0.12.1
-soxr==0.5.0.post1
-streamlit==1.41.1
-sympy==1.13.1
-tenacity==9.0.0
-tensorboard==2.12.3
-tensorboard-data-server==0.7.2
-tensorflow==2.12.1
-tensorflow-estimator==2.12.0
-tensorflow-hub==0.16.1
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-tf-keras==2.15.0
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-toml==0.10.2
-tomli==2.2.1
-torch==2.6.0
-tornado==6.4.2
-tqdm==4.67.1
-transformers==4.48.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.3.0
-watchdog==6.0.0
-Werkzeug==3.1.3
-wrapt==1.14.1
+absl-py
+altair
+altgraph
+annotated-types
+astunparse
+attrs
+audioread
+blinker
+boto3
+botocore
+cachetools
+certifi
+cffi
+charset-normalizer
+click
+colorama
+contourpy
+customtkinter
+cx_Freeze
+cx_Logging
+cycler
+darkdetect
+decorator
+deeplake
+dill
+docutils
+filelock
+filetype
+flatbuffers
+fonttools
+fsspec
+gast
+gitdb
+GitPython
+google-auth
+google-auth-oauthlib
+google-pasta
+grpcio
+h5py
+hub
+huggingface-hub
+humbug
+idna
+imageio
+imageio-ffmpeg
+jax
+jaxlib
+Jinja2
+jmespath
+joblib
+jsonschema
+jsonschema-specifications
+keras
+Kivy
+kivy-deps.angle
+kivy-deps.glew
+Kivy-Garden
+kivy_deps.sdl2
+kivymd
+kiwisolver
+lazy_loader
+libclang
+librosa
+lief
+llvmlite
+lz4
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+mdurl
+ml-dtypes
+moviepy
+mpmath
+msgpack
+multiprocess
+mutagen
+namex
+narwhals
+networkx
+numba
+numpy
+oauthlib
+opt_einsum
+optree
+packaging
+pandas
+pathos
+pefile
+pillow
+platformdirs
+plyer
+pooch
+pox
+ppft
+proglog
+protobuf
+py-splash
+pyarrow
+pyasn1
+pyasn1_modules
+pycparser
+pydantic
+pydantic_core
+pydeck
+pydub
+Pygments
+pyinstaller
+pyinstaller-hooks-contrib
+PyJWT
+pypandoc
+pyparsing
+pypiwin32
+PyQt5
+PyQt5-Qt5
+PyQt5-stubs
+PyQt5_sip
+python-dateutil
+python-dotenv
+pytz
+pywin32
+pywin32-ctypes
+PyYAML
+referencing
+regex
+requests
+requests-oauthlib
+rich
+rpds-py
+rsa
+s3transfer
+safetensors
+scikit-learn
+scipy
+six
+smmap
+soundfile
+soxr
+streamlit
+sympy
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-hub
+tensorflow-intel
+tensorflow-io-gcs-filesystem
+termcolor
+tf-keras
+threadpoolctl
+tokenizers
+toml
+tomli
+torch
+tornado
+tqdm
+transformers
+typing_extensions
+tzdata
+urllib3
+watchdog
+Werkzeug
+wrapt
