--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Build distribution packages
       run: |
         pip install -r requirements.txt
-        python -m setup.py build --no-isolation
+        python -m setup.py build
 
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
