--- a/requirements.txt
+++ b/requirements.txt
@@ -1,165 +1,16 @@
-absl-py
-altair
-altgraph
-annotated-types
 astunparse
-attrs
-audioread
-blinker
-boto3
-botocore
-build
-cachetools
-certifi
-cffi
-charset-normalizer
-click
-colorama
-contourpy
 customtkinter
-cycler
-darkdetect
-decorator
-dill
-docutils
-filelock
-filetype
-flatbuffers
-flit
-flit_core
-fonttools
-fsspec
 gast
-gitdb
-GitPython
-google-auth
-google-auth-oauthlib
-google-pasta
-grpcio
-h5py
-huggingface-hub
-humbug
-idna
-imageio
-imageio-ffmpeg
-jax
-jaxlib
-Jinja2
-jmespath
 joblib
-jsonschema
-jsonschema-specifications
-keras
-Kivy
-kivymd
-kiwisolver
-lazy_loader
-libclang
 librosa
-llvmlite
-lz4
-Markdown
-markdown-it-py
-MarkupSafe
 matplotlib
-mdurl
-ml-dtypes
-moviepy
-mpmath
-msgpack
-multiprocess
-mutagen
-namex
-narwhals
-networkx
-numba
 numpy
-oauthlib
-opt_einsum
-optree
-packaging
-pandas
-pathos
-pefile
 pillow
-pip-tools
-platformdirs
-plyer
-pooch
-pox
-ppft
-proglog
-protobuf
-py-splash
-pyarrow
-pyasn1
-pyasn1_modules
-pycparser
-pydantic
-pydantic_core
-pydeck
-pydub
-Pygments
-pyinstaller
-pyinstaller-hooks-contrib
-PyJWT
-pypandoc
-pyparsing
-pyproject_hooks
-python-dateutil
-python-dotenv
-pytz
-PyYAML
-referencing
-regex
-requests
-requests-oauthlib
-rich
-rpds-py
-rsa
-s3transfer
-safetensors
 scikit-learn
-scipy
-six
-smmap
-soundfile
-soxr
-sympy
-tenacity
-tensorboard
-tensorboard-data-server
 tensorflow
-tensorflow-estimator
-tensorflow-intel
-tensorflow-io-gcs-filesystem
 termcolor
-tf-keras
-threadpoolctl
-tokenizers
-toml
-tomli
-tomli_w
 torch
-tornado
-tqdm
-transformers
 typing_extensions
-tzdata
-urllib3
-watchdog
-Werkzeug
-wrapt
-wheel
 setuptools
-pypandoc
-importlib-metadata
 cx_Freeze
-AudioSegment
-kagglehub
-pillow
-customtkinter
-tensorflow_hub
-py_splash
-splash
-IPython
+voiceauthCore
