--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,4 +1,4 @@
-name: VoiceAuth Upload Python Package
+name: voiceauthCore Upload Python Package
 
 on:
   release:
@@ -22,25 +22,22 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9"
-
+        python-version: "3.10"
+        
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel cx_Freeze build twine  -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
 
-    - name: Build distribution packages
+    - name: Build package
       run: |
-        pip install -r requirements.txt
-        python -m setup.py build
-
-    - name: Publish package to TestPyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        python setup.py sdist bdist_wheel
 
     - name: Publish package to PyPI
-      if: success()
       uses: pypa/gh-action-pypi-publish@release/v1
+      if: success()
       with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        repository-url: https://upload.pypi.org/legacy/
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
