Resetup of setup file missed some file.s

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,120 @@
 customtkinter
 joblib
 librosa
-matplotlib
 numpy
 pillow
 scikit-learn
 setuptools
 cx_Freeze
-voiceauthCore
-torch
-typing_extensions
-tensorflow
+cffi
+defusedxml
+PyQt6
+ipython
+pip
+attrs
+wheel
+protobuf
+docutils
+tornado
+Jinja2
+absl-py
 gast
+grpcio
+grpcio-tools
+h5py
+rich
+Pygments
+markdown-it-py
+typing_extensions
+requests
+keras
+colorama
+PyYAML
+libclang
+ml-dtypes
+tensorflow
+optree
+packaging
+pydot
+psutil
+huggingface-hub
+scipy
+torch
+pandas
+namex
+matplotlib
+opencv-python
+mdurl
+llvmlite
+numba
+pexpect
+GitPython
+nbformat
+cloudpickle
+charset-normalizer
+Cython
+pytz
+pyinstaller
+six
+google-pasta
+pooch
+tqdm
+platformdirs
+regex
+threadpoolctl
+mpmath
+sympy
+decorator
 astunparse
+onnx
+tensorboard
+torchvision
+opt_einsum
+redis
+filelock
+urllib3
+fsspec
+lz4
+zstandard
+aiohttp
+yarl
+ujson
+MarkupSafe
+certifi
+soundfile
+audioread
+soxr
+lazy_loader
+msgpack
+murmurhash
+h2
+Markdown
+networkx
+idna
+chardet
+simplejson
+PyQt5
+importlib_metadata
+tomli
+pycparser
 termcolor
+darkdetect
+more-itertools
+typeguard
+zipp
+build
+flatbuffers
+wrapt
+portpicker
+dill
+tokenizers
+safetensors
+botocore
+boto3
+Werkzeug
+transformers
+beautifulsoup4
+pydantic
+tf_keras
+pydub
+voiceauthcore
