Resetup of setup file missed some file.s

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,25 @@
-customtkinter
+numpy
 joblib
 librosa
-numpy
-pillow
 scikit-learn
-setuptools
-cx_Freeze
+customtkinter
+voiceauthCore
 cffi
 defusedxml
 PyQt6
+pillow
 ipython
 pip
 attrs
+DateTime
 wheel
 protobuf
 docutils
+Sphinx
 tornado
 Jinja2
 absl-py
+setuptools
 gast
 grpcio
 grpcio-tools
@@ -93,12 +95,13 @@ networkx
 idna
 chardet
 simplejson
+cx_Freeze
 PyQt5
 importlib_metadata
-tomli
 pycparser
 termcolor
 darkdetect
+tomli
 more-itertools
 typeguard
 zipp
@@ -117,4 +120,4 @@ beautifulsoup4
 pydantic
 tf_keras
 pydub
-voiceauthcore
+voiceauthCore
