refractoring since backend is getting  better

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,9 @@
-numpy
+customtkinter
 joblib
 librosa
-scikit-learn
-customtkinter
-cffi
-defusedxml
-PyQt6
+numpy
 pillow
-ipython
-pip
-attrs
-DateTime
-wheel
-protobuf
-docutils
-Sphinx
-tornado
-Jinja2
-absl-py
+scikit-learn
+voiceauthCore
 setuptools
-gast
-grpcio
-grpcio-tools
-h5py
-rich
-Pygments
-markdown-it-py
-typing_extensions
-requests
-keras
-colorama
-PyYAML
-libclang
-ml-dtypes
-optree
-packaging
-pydot
-psutil
-huggingface-hub
-scipy
-torch
-pandas
-namex
-matplotlib
-opencv-python
-mdurl
-llvmlite
-numba
-pexpect
-GitPython
-nbformat
-cloudpickle
-charset-normalizer
-Cython
-pytz
-pyinstaller
-six
-google-pasta
-pooch
-tqdm
-platformdirs
-regex
-threadpoolctl
-mpmath
-sympy
-decorator
-astunparse
-tensorboard
-torchvision
-opt_einsum
-redis
-filelock
-urllib3
-fsspec
-lz4
-zstandard
-aiohttp
-yarl
-ujson
-MarkupSafe
-certifi
-soundfile
-audioread
-soxr
-lazy_loader
-msgpack
-murmurhash
-h2
-Markdown
-networkx
-idna
-chardet
-simplejson
 cx_Freeze
-PyQt5
-importlib_metadata
-pycparser
-termcolor
-darkdetect
-tomli
-more-itertools
-typeguard
-zipp
-build
-flatbuffers
-wrapt
-portpicker
-dill
-tokenizers
-safetensors
-botocore
-boto3
-Werkzeug
-transformers
-beautifulsoup4
-pydantic
-tf_keras
-pydub
-tensorflow-intel
